Test failure: assert(is_bound() || is_unused()) after JDK-8206075 in C1

XMLWordPrintable

    • 12
    • b09
    • generic
    • linux

        C1 holds a label to the unwind handler. There are bail-out paths where a branch to this label has already been emitted but the handler hasn't (e.g. code cache full). The label is therefore unbound when the destructor is invoked and the assertion fires.

          1. hs_err.html
            105 kB
            Lutz Schmidt
          2. replay.html
            1.02 MB
            Lutz Schmidt

              Assignee:
              Gunter Haug
              Reporter:
              Lutz Schmidt
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: