8208480: Test failure: assert(is_bound() || is_unused()) after JDK-8206075 in C1

Reviewed-by: kvn, phh, lucy